@@ -8,6 +8,10 @@
 ==== Windows ====
 	* Fix displaying folders in the add torrent dialog
 
+==== Blocklist ====
+	* Fix blocklist status icon not opening the blocklist preference
+	  page in certain locales
+
 === Deluge 1.2.0_rc5 (17 December 2009) ===
 ==== Web ====
 	* Swap order of buttons in Remove window (Closes #1083)
